--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "admin-lte": "^3.0.5",
     "aos": "^2.3.4",
     "bootstrap": "4.1.1",
+    "bs-stepper": "^1.7.0",
     "html2pdf.js": "^0.10.1",
+    "leaflet": "^1.9.3",
     "ngx-bootstrap-modal": "^2.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
