--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~10.2.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-select/ng-select": "^7.3.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@swimlane/ngx-datatable": "^20.0.0",
     "@syncfusion/ej2-angular-calendars": "^20.3.50-ngcc",
     "@syncfusion/ej2-angular-charts": "^19.4.40",
